--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 /* Resete de configurações do site */
 * {
     margin:0;
@@ -15,7 +16,7 @@ body {
 
 /* Configurações do background inicial da floresta */
 #background-main {
-    background-image: url(/VIAGENS-PELO-MUNDO-versao-mobile/imagens/fundo.jpg);
+    background-image: url(/imagens/fundo.jpg);
     background-size: cover;
     background-position-y: -120px;
     height: 402px;
